# Neurochain

./: .gitignore  Cargo.toml  README.md  benchmark_data.csv  combine.sh  notes.txt 
crates/contract-kernel-bench/: Cargo.toml  build.rs  gen_ds.py  train_upd.py
crates/contract-kernel-bench/kernels/: classic.cu  launcher.cu  neural_contract.cu
crates/contract-kernel-bench/src/: main.rs
crates/gpu-consensus-bench/: Cargo.toml
crates/gpu-consensus-bench/kernels/: benchmark.cu  benchmark.ptx  classic.cu  neural.cu
crates/gpu-consensus-bench/src/: cuda_nn.rs  lib.rs  main.rs
crates/gpu-consensus-bench/src/nas/: engine.rs  mod.rs
crates/gpu-consensus-bench/src/validator/: classic.rs  mod.rs  neural.rs
crates/hard-kernel-bench/: Cargo.toml  launcher.cu  train.py
crates/hard-kernel-bench/kernels/: classic.cu
crates/neural-consensus/: Cargo.toml
crates/neural-consensus/src/: bft.rs  lib.rs  state.rs  validator_node.rs
crates/neural-contracts/: Cargo.toml
crates/neural-contracts/kernels/: classical_contract.cu  neural_contract.cu
crates/neural-contracts/src/: bench.rs  contract.rs  lib.rs  main.rs  runtime.rs
crates/validator-kernel-bench/: Cargo.toml  build.rs
crates/validator-kernel-bench/kernels/: neural.cu
crates/validator-kernel-bench/src/: main.rs
docs/: 01-introduction.md  02-architecture.md  03-consensus.md  04-nas.md  05-gpu-validation.md  06-roadmap.md  07-neural-contracts.md  08-nero-validator-bench.md  DONATE.md
scripts/: check_cuda.sh
