[package]
name = "gpu-consensus-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parallel processing
rayon = "1.8"

# FP16 support
half = "2.3"
sha3 = "0.10"

# Random for stubs
rand = "0.10.1"
serde_bytes = "0.11" 

# [dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

cudarc = { version = "0.19.4", features = ["cuda-13020"] }
# rand = "0.10.1"
ndarray = { version = "0.17.2", features = ["rayon"] }
ndarray-rand = "0.16.0"
rand_distr = "0.6.0"

[[bin]]
name = "gpu-consensus-bench"
path = "src/main.rs"