[package]
name = "neural-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reuse GPU consensus
gpu-consensus-bench = { path = "../gpu-consensus-bench" }

# Async and networking
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "yamux"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Consensus types
tendermint = { version = "0.34", optional = true }  # For BFT reference

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

sha3 = "0.10"

[features]
default = []
tendermint-bft = ["tendermint"]